--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -15,27 +24,34 @@
   <body>
     <header class="header">
       <div class="container header-container">
-           <a href="../index.html" class="header-logo"><span class="header-logo1">Web</span><span class="header-logo2">Studio</span></a>
-           <ul class="header-list">
-             <li class="header-item">
-              <a href="../index.html" class="header-link">Студія</a>
-             </li>
-             <li class="header-item">
-              <a href="./pages/portfolio.html" class="header-link">Портфоліо</a>
-             </li>
-             <li class="header-item">
-              <a href="contacts.html" class="header-link">Контакти</a>
-             </li>
-           </ul>
-           <ul class="header-autorisations">
-              <li class="header-item">
-              <a href="info@devstudio.com" class="header-contacts">info@devstudio.com</a>
-              </li>
-              <li class="header-item">
-              <a href="+380961111111" class="header-contacts">+38 096 111 11 11</a>
-             </li>
-           </ul>
-       </div>
+        <a href="../index.html" class="header-logo"
+          ><span class="header-logo1">Web</span
+          ><span class="header-logo2">Studio</span></a
+        >
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="../index.html" class="header-link">Студія</a>
+          </li>
+          <li class="header-item">
+            <a href="./pages/portfolio.html" class="header-link">Портфоліо</a>
+          </li>
+          <li class="header-item">
+            <a href="contacts.html" class="header-link">Контакти</a>
+          </li>
+        </ul>
+        <ul class="header-autorisations">
+          <li class="header-item">
+            <a href="info@devstudio.com" class="header-contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-item">
+            <a href="+380961111111" class="header-contacts"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <!-- Hero -->
@@ -105,22 +121,46 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img class="team-photo" src="./img/img3.webp" width="270" height="260" alt="Worker1" />
+              <img
+                class="team-photo"
+                src="./img/img3.webp"
+                width="270"
+                height="260"
+                alt="Worker1"
+              />
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-job">Product Designer</p>
             </li>
             <li class="team-item">
-              <img class="team-photo" src="./img/img4.webp" width="270" height="260" alt="Worker2" />
+              <img
+                class="team-photo"
+                src="./img/img4.webp"
+                width="270"
+                height="260"
+                alt="Worker2"
+              />
               <h3 class="team-name">Ольга Рєпіна</h3>
               <p class="team-job">Frontend Developer</p>
             </li>
             <li class="team-item">
-              <img class="team-photo" src="./img/img5.webp" width="270" height="260" alt="Worker3" />
+              <img
+                class="team-photo"
+                src="./img/img5.webp"
+                width="270"
+                height="260"
+                alt="Worker3"
+              />
               <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-job">Marketing</p>
             </li>
             <li class="team-item">
-              <img class="team-photo" src="./img/img6.webp" width="270" height="260" alt="Worker4" />
+              <img
+                class="team-photo"
+                src="./img/img6.webp"
+                width="270"
+                height="260"
+                alt="Worker4"
+              />
               <h3 class="team-name">Михайло Єрмаков</h3>
               <p class="team-job">UI Designer</p>
             </li>
