--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,8 +22,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-      <nav class="header-nav">
+      <div class="container header-container">
           <a href="../index.html" class="header-logo"
             ><span class="header-logo1">Web</span
             ><span class="header-logo2">Studio</span></a
@@ -39,7 +38,7 @@
               <a href="contacts.html" class="header-link">Контакти</a>
             </li>
           </ul>
-          <ul class="header-item">
+          <ul class="header-autorisations">
             <li class="header-item">
               <a href="info@devstudio.com" class="header-contacts"
                 >info@devstudio.com</a
@@ -52,7 +51,6 @@
             </li>
           </ul>
         </div>
-      </nav>
     </header>
     <main>
       <!-- Hero -->
