--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -40,12 +40,18 @@
           </li>
         </ul>
         <ul class="header-autorisations">
-          <li class="header-item">
+          <li class="header-item2">
+            <svg class="header-icon-mail">
+              <use href="/img/symbol-defs.svg#icon-mail"></use>
+            </svg>
             <a href="info@devstudio.com" class="header-contacts"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-item">
+          <li class="header-item2">
+            <svg class="header-icon-phone">
+              <use href="/img/symbol-defs.svg#icon-phone"></use>
+            </svg>
             <a href="+380961111111" class="header-contacts"
               >+38 096 111 11 11</a
             >
@@ -130,6 +136,28 @@
               />
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-job">Product Designer</p>
+              <div class="team-icons">
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -141,6 +169,28 @@
               />
               <h3 class="team-name">Ольга Рєпіна</h3>
               <p class="team-job">Frontend Developer</p>
+              <div class="team-icons">
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -152,6 +202,28 @@
               />
               <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-job">Marketing</p>
+              <div class="team-icons">
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -163,13 +235,74 @@
               />
               <h3 class="team-name">Михайло Єрмаков</h3>
               <p class="team-job">UI Designer</p>
+              <div class="team-icons">
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="team-icon-container">
+                  <svg class="team-icon">
+                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
       </section>
+
+      <!-- customers -->
+      <section class="customers-section">
+        <div class="customers-container container">
+          <h2 class="customers-title">Постійні клієнти</h2>
+          <div class="customers-icons">
+            <div class="customers-icon-container">
+              <svg class="customers-icon">
+                <use href="/img/symbol-defs.svg#icon-logo-1"></use>
+              </svg>
+            </div>
+            <div class="customers-icon-container">
+              <svg class="customers-icon">
+                <use href="/img/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </div>
+            <div class="customers-icon-container">
+              <svg class="customers-icon">
+                <use href="/img/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </div>
+            <div class="customers-icon-container">
+              <svg class="customers-icon">
+                <use href="/img/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </div>
+            <div class="customers-icon-container">
+              <svg class="customers-icon">
+                <use href="/img/symbol-defs.svg#icon-logo-5"></use>
+              </svg>
+            </div>
+            <div class="customers-icon-container">
+              <svg class="customers-icon">
+                <use href="/img/symbol-defs.svg#icon-logo-6"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container container">
         <ul class="footer-list">
           <li class="footer-item">
             <a href="../index.html" class="footer-logo"
@@ -193,6 +326,31 @@
             >
           </li>
         </ul>
+        <div class="footer-icons">
+          <h3 class="footer-icon-subtitle">ПРИЄДНУЙТЕСЬ</h3>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="/img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="/img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
