--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,34 +23,38 @@
   <body>
     <header class="header">
       <div class="container header-container">
-          <a href="../index.html" class="header-logo"
-            ><span class="header-logo1">Web</span
-            ><span class="header-logo2">Studio</span></a
-          >
-          <ul class="header-list">
-            <li class="header-item">
-              <a href="../index.html" class="header-link">Студія</a>
-            </li>
-            <li class="header-item">
-              <a href="./pages/portfolio.html" class="header-link">Портфоліо</a>
-            </li>
-            <li class="header-item">
-              <a href="contacts.html" class="header-link">Контакти</a>
-            </li>
-          </ul>
-          <ul class="header-autorisations">
-            <li class="header-item">
-              <a href="info@devstudio.com" class="header-contacts"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="header-item">
-              <a href="+380961111111" class="header-contacts"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </div>
+        <a href="../index.html" class="header-logo"
+          ><span class="header-logo1">Web</span
+          ><span class="header-logo2">Studio</span></a
+        >
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="../index.html" class="header-link">Студія</a>
+          </li>
+          <li class="header-item">
+            <a href="./pages/portfolio.html" class="header-link">Портфоліо</a>
+          </li>
+          <li class="header-item">
+            <a href="contacts.html" class="header-link">Контакти</a>
+          </li>
+        </ul>
+        <ul class="header-autorisations">
+          <li class="header-item2">
+            <svg class="header-icon-mail">
+              <use href="/img/symbol-defs.svg#icon-mail"></use>
+            </svg>
+            <a href="info@devstudio.com" class="header-contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-item2">
+            <svg class="header-icon-phone">
+              <use href="/img/symbol-defs.svg#icon-phone"></use>
+            </svg>
+            <a href="+380961111111" class="header-contacts">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <!-- Hero -->
@@ -80,7 +84,11 @@
               <p class="hero-text">Веб-сайт</p>
             </li>
             <li class="hero-poster">
-              <img class="hero-image" src="../img/basketball.webp" alt="basketball" />
+              <img
+                class="hero-image"
+                src="../img/basketball.webp"
+                alt="basketball"
+              />
               <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
               <p class="hero-text">Дизайн</p>
             </li>
@@ -90,7 +98,11 @@
               <p class="hero-text">Додаток</p>
             </li>
             <li class="hero-poster">
-              <img class="hero-image" src="../img/headphones.webp" alt="headphones" />
+              <img
+                class="hero-image"
+                src="../img/headphones.webp"
+                alt="headphones"
+              />
               <h3 class="hero-title">Проєкт Prime</h3>
               <p class="hero-text">Маркетинг</p>
             </li>
@@ -124,7 +136,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container container">
         <ul class="footer-list">
           <li class="footer-item">
             <a href="../index.html" class="footer-logo"
@@ -148,6 +160,31 @@
             >
           </li>
         </ul>
+        <div class="footer-icons">
+          <h3 class="footer-icon-subtitle">ПРИЄДНУЙТЕСЬ</h3>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="/img/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="/img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="/img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-icon-item">
+              <svg class="footer-icon">
+                <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
