--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul class="header-autorisations">
           <li class="header-item2">
             <svg class="header-icon-mail">
-              <use href="/img/symbol-defs.svg#icon-mail"></use>
+              <use href="./img/symbol-defs.svg#icon-mail"></use>
             </svg>
             <a href="info@devstudio.com" class="header-contacts"
               >info@devstudio.com</a
@@ -50,7 +50,7 @@
           </li>
           <li class="header-item2">
             <svg class="header-icon-phone">
-              <use href="/img/symbol-defs.svg#icon-phone"></use>
+              <use href="./img/symbol-defs.svg#icon-phone"></use>
             </svg>
             <a href="+380961111111" class="header-contacts"
               >+38 096 111 11 11</a
@@ -144,17 +144,17 @@
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </div>
@@ -177,17 +177,17 @@
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </div>
@@ -210,17 +210,17 @@
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </div>
@@ -243,17 +243,17 @@
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </div>
                 <div class="team-icon-container">
                   <svg class="team-icon">
-                    <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </div>
@@ -269,32 +269,32 @@
           <div class="customers-icons">
             <div class="customers-icon-container">
               <svg class="customers-icon">
-                <use href="/img/symbol-defs.svg#icon-logo-1"></use>
+                <use href="./img/symbol-defs.svg#icon-logo-1"></use>
               </svg>
             </div>
             <div class="customers-icon-container">
               <svg class="customers-icon">
-                <use href="/img/symbol-defs.svg#icon-logo-2"></use>
+                <use href="./img/symbol-defs.svg#icon-logo-2"></use>
               </svg>
             </div>
             <div class="customers-icon-container">
               <svg class="customers-icon">
-                <use href="/img/symbol-defs.svg#icon-logo-3"></use>
+                <use href="./img/symbol-defs.svg#icon-logo-3"></use>
               </svg>
             </div>
             <div class="customers-icon-container">
               <svg class="customers-icon">
-                <use href="/img/symbol-defs.svg#icon-logo-4"></use>
+                <use href="./img/symbol-defs.svg#icon-logo-4"></use>
               </svg>
             </div>
             <div class="customers-icon-container">
               <svg class="customers-icon">
-                <use href="/img/symbol-defs.svg#icon-logo-5"></use>
+                <use href="./img/symbol-defs.svg#icon-logo-5"></use>
               </svg>
             </div>
             <div class="customers-icon-container">
               <svg class="customers-icon">
-                <use href="/img/symbol-defs.svg#icon-logo-6"></use>
+                <use href="./img/symbol-defs.svg#icon-logo-6"></use>
               </svg>
             </div>
           </div>
@@ -336,17 +336,17 @@
             </li>
             <li class="footer-icon-item">
               <svg class="footer-icon">
-                <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
               </svg>
             </li>
             <li class="footer-icon-item">
               <svg class="footer-icon">
-                <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
               </svg>
             </li>
             <li class="footer-icon-item">
               <svg class="footer-icon">
-                <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </li>
           </ul>
