--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -41,7 +41,7 @@
         <ul class="header-autorisations">
           <li class="header-item2">
             <svg class="header-icon-mail">
-              <use href="/img/symbol-defs.svg#icon-mail"></use>
+              <use href="./img/symbol-defs.svg#icon-mail"></use>
             </svg>
             <a href="info@devstudio.com" class="header-contacts"
               >info@devstudio.com</a
@@ -49,7 +49,7 @@
           </li>
           <li class="header-item2">
             <svg class="header-icon-phone">
-              <use href="/img/symbol-defs.svg#icon-phone"></use>
+              <use href="./img/symbol-defs.svg#icon-phone"></use>
             </svg>
             <a href="+380961111111" class="header-contacts">+38 096 111 11 11</a>
           </li>
@@ -165,22 +165,22 @@
           <ul class="footer-icon-list">
             <li class="footer-icon-item">
               <svg class="footer-icon">
-                <use href="/img/symbol-defs.svg#icon-instagram"></use>
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
               </svg>
             </li>
             <li class="footer-icon-item">
               <svg class="footer-icon">
-                <use href="/img/symbol-defs.svg#icon-twitter"></use>
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
               </svg>
             </li>
             <li class="footer-icon-item">
               <svg class="footer-icon">
-                <use href="/img/symbol-defs.svg#icon-facebook"></use>
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
               </svg>
             </li>
             <li class="footer-icon-item">
               <svg class="footer-icon">
-                <use href="/img/symbol-defs.svg#icon-linkedin"></use>
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </li>
           </ul>
