--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
         </ul>
         <ul class="header-autorisations">
           <li class="header-item2">
-            <svg class="header-icon-mail">
-              <use href="./img/symbol-defs.svg#icon-mail"></use>
-            </svg>
-            <a href="info@devstudio.com" class="header-contacts"
-              >info@devstudio.com</a
-            >
+            <a href="info@devstudio.com" class="header-contacts">
+              <svg class="header-icon-mail">
+                <use href="./img/symbol-defs.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-item2">
-            <svg class="header-icon-phone">
-              <use href="./img/symbol-defs.svg#icon-phone"></use>
-            </svg>
-            <a href="+380961111111" class="header-contacts"
-              >+38 096 111 11 11</a
-            >
+            <a href="+380961111111" class="header-contacts">
+              <svg class="header-icon-phone">
+                <use href="./img/symbol-defs.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -137,26 +137,26 @@
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-job">Product Designer</p>
               <div class="team-icons">
-                <div class="team-icon-container">
+                <a class="team-contacts" href="instagram">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="twitter">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="facebook">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="linkedin">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
-                </div>
+                </a>
               </div>
             </li>
             <li class="team-item">
@@ -170,26 +170,26 @@
               <h3 class="team-name">Ольга Рєпіна</h3>
               <p class="team-job">Frontend Developer</p>
               <div class="team-icons">
-                <div class="team-icon-container">
+                <a class="team-contacts" href="instagram">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="twitter">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="facebook">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="linkedin">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
-                </div>
+                </a>
               </div>
             </li>
             <li class="team-item">
@@ -203,26 +203,26 @@
               <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-job">Marketing</p>
               <div class="team-icons">
-                <div class="team-icon-container">
+                <a class="team-contacts" href="instagram">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="twitter">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="facebook">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="linkedin">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
-                </div>
+                </a>
               </div>
             </li>
             <li class="team-item">
@@ -236,26 +236,26 @@
               <h3 class="team-name">Михайло Єрмаков</h3>
               <p class="team-job">UI Designer</p>
               <div class="team-icons">
-                <div class="team-icon-container">
+                <a class="team-contacts" href="instagram">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="twitter">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="facebook">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
-                </div>
-                <div class="team-icon-container">
+                </a>
+                <a class="team-contacts" href="linkedin">
                   <svg class="team-icon">
                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
-                </div>
+                </a>
               </div>
             </li>
           </ul>
@@ -267,36 +267,36 @@
         <div class="customers-container container">
           <h2 class="customers-title">Постійні клієнти</h2>
           <div class="customers-icons">
-            <div class="customers-icon-container">
+            <a class="customers-contacts" href="logo1">
               <svg class="customers-icon">
                 <use href="./img/symbol-defs.svg#icon-logo-1"></use>
               </svg>
-            </div>
-            <div class="customers-icon-container">
+            </a>
+            <a class="customers-contacts" href="logo2">
               <svg class="customers-icon">
                 <use href="./img/symbol-defs.svg#icon-logo-2"></use>
               </svg>
-            </div>
-            <div class="customers-icon-container">
+            </a>
+            <a class="customers-contacts" href="logo3">
               <svg class="customers-icon">
                 <use href="./img/symbol-defs.svg#icon-logo-3"></use>
               </svg>
-            </div>
-            <div class="customers-icon-container">
+            </a>
+            <a class="customers-contacts" href="logo4">
               <svg class="customers-icon">
                 <use href="./img/symbol-defs.svg#icon-logo-4"></use>
               </svg>
-            </div>
-            <div class="customers-icon-container">
+            </a>
+            <a class="customers-contacts" href="logo5">
               <svg class="customers-icon">
                 <use href="./img/symbol-defs.svg#icon-logo-5"></use>
               </svg>
-            </div>
-            <div class="customers-icon-container">
+            </a>
+            <a class="customers-contacts" href="logo6">
               <svg class="customers-icon">
                 <use href="./img/symbol-defs.svg#icon-logo-6"></use>
               </svg>
-            </div>
+            </a>
           </div>
         </div>
       </section>
@@ -330,24 +330,32 @@
           <h3 class="footer-icon-subtitle">ПРИЄДНУЙТЕСЬ</h3>
           <ul class="footer-icon-list">
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-instagram"></use>
-              </svg>
+              <a class="footer-contacts" href="instagram">
+                <svg class="footer-icon">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-twitter"></use>
-              </svg>
+              <a class="footer-contacts" href="twitter">
+                <svg class="footer-icon">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-facebook"></use>
-              </svg>
+              <a class="footer-contacts" href="facebook">
+                <svg class="footer-icon">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
+              <a class="footer-contacts" href="linkedin">
+                <svg class="footer-icon">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
