--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -40,18 +40,20 @@
         </ul>
         <ul class="header-autorisations">
           <li class="header-item2">
-            <svg class="header-icon-mail">
-              <use href="./img/symbol-defs.svg#icon-mail"></use>
-            </svg>
-            <a href="info@devstudio.com" class="header-contacts"
-              >info@devstudio.com</a
-            >
+            <a href="info@devstudio.com" class="header-contacts">
+              <svg class="header-icon-mail">
+                <use href="../img/symbol-defs.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-item2">
-            <svg class="header-icon-phone">
-              <use href="./img/symbol-defs.svg#icon-phone"></use>
-            </svg>
-            <a href="+380961111111" class="header-contacts">+38 096 111 11 11</a>
+            <a href="+380961111111" class="header-contacts">
+              <svg class="header-icon-phone">
+                <use href="../img/symbol-defs.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -164,28 +166,35 @@
           <h3 class="footer-icon-subtitle">ПРИЄДНУЙТЕСЬ</h3>
           <ul class="footer-icon-list">
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-instagram"></use>
-              </svg>
+              <a class="footer-contacts" href="instagram">
+                <svg class="footer-icon">
+                  <use href="../img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-twitter"></use>
-              </svg>
+              <a class="footer-contacts" href="twitter">
+                <svg class="footer-icon">
+                  <use href="../img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-facebook"></use>
-              </svg>
+              <a class="footer-contacts" href="facebook">
+                <svg class="footer-icon">
+                  <use href="../img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-icon-item">
-              <svg class="footer-icon">
-                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
+              <a class="footer-contacts" href="linkedin">
+                <svg class="footer-icon">
+                  <use href="../img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
-      </div>
     </footer>
   </body>
 </html>
