--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -80,59 +80,69 @@
             </li>
           </ul>
           <ul class="hero-posters">
-            <li class="hero-poster">
-              <img class="hero-image" src="../img/laptop.webp" alt="laptop" />
-              <h3 class="hero-title">Технокряк</h3>
-              <p class="hero-text">Веб-сайт</p>
-            </li>
-            <li class="hero-poster">
-              <img
-                class="hero-image"
-                src="../img/basketball.webp"
-                alt="basketball"
-              />
-              <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
-              <p class="hero-text">Дизайн</p>
-            </li>
-            <li class="hero-poster">
-              <img class="hero-image" src="../img/fish.webp" alt="fish" />
-              <h3 class="hero-title">Ресторан Seafood</h3>
-              <p class="hero-text">Додаток</p>
-            </li>
-            <li class="hero-poster">
-              <img
-                class="hero-image"
-                src="../img/headphones.webp"
-                alt="headphones"
-              />
-              <h3 class="hero-title">Проєкт Prime</h3>
-              <p class="hero-text">Маркетинг</p>
-            </li>
-            <li class="hero-poster">
-              <img class="hero-image" src="../img/box.webp" alt="box" />
-              <h3 class="hero-title">Проєкт Boxes</h3>
-              <p class="hero-text">Додаток</p>
-            </li>
-            <li class="hero-poster">
-              <img class="hero-image" src="../img/pc.webp" alt="pc" />
-              <h3 class="hero-title">Inspiration has no Borders</h3>
-              <p class="hero-text">Веб-сайт</p>
-            </li>
-            <li class="hero-poster">
-              <img class="hero-image" src="../img/book.webp" alt="book" />
-              <h3 class="hero-title">Видання Limited Edition</h3>
-              <p class="hero-text">Дизайн</p>
-            </li>
-            <li class="hero-poster">
-              <img class="hero-image" src="../img/label.webp" alt="label" />
-              <h3 class="hero-title">Проєкт LAB</h3>
-              <p class="hero-text">Маркетинг</p>
-            </li>
-            <li class="hero-poster">
-              <img class="hero-image" src="../img/work.webp" alt="work" />
-              <h3 class="hero-title">Growing Business</h3>
-              <p class="hero-text">Додаток</p>
-            </li>
+            <a class="hero-link" href="focus">
+             <li class="hero-poster">
+               <img class="hero-image" src="../img/laptop.webp" alt="laptop" />
+               <h3 class="hero-title">Технокряк</h3>
+               <p class="hero-text">Веб-сайт</p>
+             </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/basketball.webp" alt="basketball" />
+                <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
+                <p class="hero-text">Дизайн</p>
+              </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/fish.webp" alt="fish" />
+                <h3 class="hero-title">Ресторан Seafood</h3>
+                <p class="hero-text">Додаток</p>
+              </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/headphones.webp" alt="headphones" />
+                <h3 class="hero-title">Проєкт Prime</h3>
+                <p class="hero-text">Маркетинг</p>
+              </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/box.webp" alt="box" />
+                <h3 class="hero-title">Проєкт Boxes</h3>
+                <p class="hero-text">Додаток</p>
+              </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/pc.webp" alt="pc" />
+                <h3 class="hero-title">Inspiration has no Borders</h3>
+                <p class="hero-text">Веб-сайт</p>
+              </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/book.webp" alt="book" />
+                <h3 class="hero-title">Видання Limited Edition</h3>
+                <p class="hero-text">Дизайн</p>
+              </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/label.webp" alt="label" />
+                <h3 class="hero-title">Проєкт LAB</h3>
+                <p class="hero-text">Маркетинг</p>
+              </li>
+            </a>
+            <a class="hero-link" href="focus">
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/work.webp" alt="work" />
+                <h3 class="hero-title">Growing Business</h3>
+                <p class="hero-text">Додаток</p>
+              </li>
+            </a>
           </ul>
         </div>
       </section>
