--- a/index.html
+++ b/index.html
@@ -109,13 +109,16 @@
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-list">
             <li class="work-item">
-              <img src="./img/img.webp" alt="Work1" />
+              <img class="work-image" src="./img/img.webp" alt="Work1" />
+              <p class="work-text">Десктопні додатки</p>
             </li>
             <li class="work-item">
-              <img src="./img/img1.webp" alt="Work2" />
+              <img class="work-image" src="./img/img1.webp" alt="Work2" />
+              <p class="work-text">Мобільні додатки</p>
             </li>
             <li class="work-item">
-              <img src="./img/img2.webp" alt="Work3" />
+              <img class="work-image" src="./img/img2.webp" alt="Work3" />
+              <p class="work-text">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
