--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -81,15 +81,19 @@
           </ul>
           <ul class="hero-posters">
             <a class="hero-link" href="focus">
-             <li class="hero-poster">
-               <img class="hero-image" src="../img/laptop.webp" alt="laptop" />
-               <h3 class="hero-title">Технокряк</h3>
-               <p class="hero-text">Веб-сайт</p>
-             </li>
+              <li class="hero-poster">
+                <img class="hero-image" src="../img/laptop.webp" alt="laptop" />
+                <h3 class="hero-title">Технокряк</h3>
+                <p class="hero-text">Веб-сайт</p>
+              </li>
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
-                <img class="hero-image" src="../img/basketball.webp" alt="basketball" />
+                <img
+                  class="hero-image"
+                  src="../img/basketball.webp"
+                  alt="basketball"
+                />
                 <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
                 <p class="hero-text">Дизайн</p>
               </li>
@@ -103,7 +107,11 @@
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
-                <img class="hero-image" src="../img/headphones.webp" alt="headphones" />
+                <img
+                  class="hero-image"
+                  src="../img/headphones.webp"
+                  alt="headphones"
+                />
                 <h3 class="hero-title">Проєкт Prime</h3>
                 <p class="hero-text">Маркетинг</p>
               </li>
@@ -205,6 +213,24 @@
             </li>
           </ul>
         </div>
+        <form action="" class="basement-form">
+          <h1 class="basement-form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h1>
+          <div class="basement-form-container">
+            <input
+              type="text"
+              name=""
+              class="basement-form-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="basement-form-button">
+              Підписатися
+              <svg class="basement-form-icon">
+                <use href="../img/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
+      </div>
     </footer>
   </body>
 </html>
