--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/modal.css">
   </head>
 
   <body>
@@ -64,7 +65,7 @@
       <section class="hero-section">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-button" type="button">Замовити послугу</button>
+          <button data-modal-open class="hero-button" type="button">Замовити послугу</button>
         </div>
       </section>
 
@@ -362,7 +363,76 @@
             </li>
           </ul>
         </div>
+        <form action="" class="basement-form">
+          <h1 class="basement-form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h1>
+          <div class="basement-form-container">
+            <input
+              type="text"
+              name=""
+              class="basement-form-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="basement-form-button">
+              Підписатися
+              <svg class="basement-form-icon">
+                <use href="./img/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
+    <div data-modal class="backdrop is-hidden">
+      <div class="modal">
+        <form action="" class="modal-form">
+          <button data-modal-close type="submit" class="modal-close-button">
+            <svg class="modal-close-icon">
+              <use href="./img/symbol-defs.svg#icon-close"></use>
+            </svg>
+          </button>
+          <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+          <ul class="modal-list">
+            <li class="modal-item">
+              <label class="modal-label" for="">Ім'я</label>
+              <div class="modal-input-container">
+                <input class="modal-input" type="name" />
+                <svg class="modal-icon">
+                  <use href="./img/symbol-defs.svg#icon-human"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="modal-item">
+              <label class="modal-label" for="">Телефон</label>
+              <div class="modal-input-container">
+                <input class="modal-input" type="tel" />
+                <svg class="modal-icon">
+                  <use href="./img/symbol-defs.svg#icon-tell"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="modal-item">
+              <label class="modal-label" for="">Пошта</label>
+              <div class="modal-input-container">
+                <input class="modal-input" type="email" />
+                <svg class="modal-icon">
+                  <use href="./img/symbol-defs.svg#icon-email"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="modal-item">
+              <label class="modal-label" for="">Коментар</label>
+              <input class="modal-input1" placeholder="Введіть текст" type="comment"/>
+            </li>
+          </ul>
+          <div class="modal-agrees">
+            <input class="modal-input-agrees" type="checkbox"/>
+            <label class="modal-label-agrees" for="">Погоджуюся з розсилкою та приймаю</label>
+            <a href="#" class="modal-agrees-link">Умови договору</a>
+          </div>
+          <button class="modal-button" type="submit">Відправити</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
