--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -82,6 +82,13 @@
           <ul class="hero-posters">
             <a class="hero-link" href="focus">
               <li class="hero-poster">
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <img class="hero-image" src="../img/laptop.webp" alt="laptop" />
                 <h3 class="hero-title">Технокряк</h3>
                 <p class="hero-text">Веб-сайт</p>
@@ -89,17 +96,27 @@
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
-                <img
-                  class="hero-image"
-                  src="../img/basketball.webp"
-                  alt="basketball"
-                />
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <img class="hero-image" src="../img/basketball.webp" alt="basketball" />
                 <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
                 <p class="hero-text">Дизайн</p>
               </li>
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <img class="hero-image" src="../img/fish.webp" alt="fish" />
                 <h3 class="hero-title">Ресторан Seafood</h3>
                 <p class="hero-text">Додаток</p>
@@ -107,17 +124,27 @@
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
-                <img
-                  class="hero-image"
-                  src="../img/headphones.webp"
-                  alt="headphones"
-                />
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <img class="hero-image" src="../img/headphones.webp"  alt="headphones" />
                 <h3 class="hero-title">Проєкт Prime</h3>
                 <p class="hero-text">Маркетинг</p>
               </li>
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <img class="hero-image" src="../img/box.webp" alt="box" />
                 <h3 class="hero-title">Проєкт Boxes</h3>
                 <p class="hero-text">Додаток</p>
@@ -125,6 +152,13 @@
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <img class="hero-image" src="../img/pc.webp" alt="pc" />
                 <h3 class="hero-title">Inspiration has no Borders</h3>
                 <p class="hero-text">Веб-сайт</p>
@@ -132,6 +166,13 @@
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <img class="hero-image" src="../img/book.webp" alt="book" />
                 <h3 class="hero-title">Видання Limited Edition</h3>
                 <p class="hero-text">Дизайн</p>
@@ -139,6 +180,13 @@
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <img class="hero-image" src="../img/label.webp" alt="label" />
                 <h3 class="hero-title">Проєкт LAB</h3>
                 <p class="hero-text">Маркетинг</p>
@@ -146,6 +194,13 @@
             </a>
             <a class="hero-link" href="focus">
               <li class="hero-poster">
+                <div class="hero-overlay">
+                  <p class="hero-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <img class="hero-image" src="../img/work.webp" alt="work" />
                 <h3 class="hero-title">Growing Business</h3>
                 <p class="hero-text">Додаток</p>
