--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/portfolio.css" />
+    <link rel="stylesheet" href="../css/animations-libraly.css">
   </head>
   <body>
     <header class="header">
